Clase 15 mayo, problema con Toast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="contrasena">Contraseña</string>
     <string name="boton">Cambiar dato</string>
     <string name="dato">Ingresar dato</string>
-    <string name="mensajeToast">Lanzar Cuadro</string>
+    <string name="inicioSesion">Iniciar Sesión</string>
+    <string name="acercaDe">Acerca de</string>
+    <string name="siguiente">Siguiente</string>
 </resources>
 
